[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnelbench"
version = "0.1.0"
description = "A powerful CLI tool to benchmark VPN servers for heavy tunnel usage."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "requests>=2.28.0",
]

[project.scripts]
tunnelbench = "tunnelbench.cli:app"
